[feat]: [PIE-6722]: Refactor NodeExecutionService impl to adopt streaming from mongo (#41379)
* [feat]: [PIE-6722]: Adding consumeOptional in ExecutionSweepingOutputService

* [feat]: [PIE-6722]: Adding index to ExecutionInputInstance and ExecutionSweepingOutputInstance using FdTtlIndex

* [feat]: [PIE-6722]: Adding mongo stream to NodeExecution method

* [feat]: [PIE-6722]: Adding mongo stream to NodeExecution method

* [feat]: [PIE-6722]: Adding mongo stream to NodeExecution method

* [feat]: [PIE-6772]: Handling Code refactoring for nodeExecution

* [feat]: [PIE-6772]: Replace Page<NodeExecution> method with Iterator

* [feat]: [PIE-6772]: Replace Page<NodeExecution> method with Iterator

* [feat]: [PIE-6772]: Removed unnecessary methods from nodeExecution

* [feat]: [PIE-6772]: Removed unnecessary methods from nodeExecution

* [feat]: [PIE-6772]: Removed unnecessary methods from nodeExecution

* [feat]: [PIE-6772]: Removed unnecessary methods from nodeExecution

* [feat]: [PIE-6772]: Fixing test failures

* [feat]: [PIE-6964]: Adding Trial license check for restrictions in pipeline executions

* [feat]: [PIE-6722]: ConsumeOptional for sweeping output impl